examples/errors/expr_type_mismatch.alan
main(): proc
    x: int;
{
    x = x + 'c';
}